--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,12 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/phone.svg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 
-    <title>React - Homework 8 (PhoneBook)</title>
+    <title>PhoneBook</title>
 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" /> -->
-
-    <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
 
       (function (l) {
